# helio-mono

./: .editorconfig  .env.dev.example  .env.example  .env.live.example  .env.staging.example  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: ENGINEERING_CONSTITUTION.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW.md  copilot-instructions.md  process_fixes.md
SDLC/: README.md  SDLC_GITHUB_BRIDGE_POLICY.md  SDLC_PROCESS_CHANGELOG.md  WORKFLOW.md
docs/: ADR_M10_DEEP_LINK_CONTEXT_CONTRACT.md  ADR_M11_LAB_EXPERIMENT_EXECUTION_BOUNDARY.md  ADR_M11_LAB_GUARDRAILED_WRITE_CONTROLS.md  ADR_M1_LLM_INTEGRATION.md  ADR_M1_SQLITE_PERSISTENCE.md  ADR_M4_BACKUP_RESTORE_ARTIFACT.md  ADR_M4_ENCRYPTION_AT_REST.md  ADR_M5_TASK_CANONICALIZATION.md  ADR_M6_BOUNDED_LEARNING_FROM_FEEDBACK.md  ADR_M7_BOUNDED_PERSONALIZATION_POLICY.md  ADR_M9_THIN_UI_API_FIRST_BOUNDARY.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_M0.md  CONTROL_PLANE_POLICY_CONTRACT.md  DATA_MANAGEMENT.md  DEPLOYMENT.md  M1_HANDOFF_ARCHITECTURE_TO_DEVELOPER.md  M1_QA_REPORT.md  M1_QA_REPORT_FINAL.md  M2_QA_REPORT.md  M6_LEARNING_RUNBOOK.md  M8_FEEDBACK_SEMANTICS.md  M9_QA_REPORT.md  MILESTONE10A_CHARTER.md  MILESTONE10_CHARTER.md  MILESTONE11_CHARTER.md  MILESTONE1_CHARTER.md  MILESTONE2_CHARTER.md  MILESTONE3_CHARTER.md  MILESTONE4_CHARTER.md  MILESTONE5_CHARTER.md  MILESTONE6_CHARTER.md  MILESTONE7_CHARTER.md  MILESTONE_5_CHARTER.md  PROJECT_CHARTER.md  SECURITY.md  USER_GUIDE_M1.md  findings.md
scripts/: backup.sh  demo_walking_skeleton.py  evaluate_attention_replay.py  query_live.py  (+7 more)
(+226 files in other folders)
